@@ -1,3 +1,5 @@
+* FEA#7620 Ajout de la méthode set_sub_status afin de permettre la mise à jour du sous statut d'un sinistre depuis la configuration d'un processus
+
 Version 1.14 - 2017-11-09
 * BUG#6891 Ne pas exporter les descripteurs d'événement lors de l'export d'un process
 * BUG#6659 Correction d'un bug dans le calcul des documents à demander pour l'indemnisation
