@@ -1,3 +1,5 @@
+* FEA#7620 Add the method set_sub_status in order to update the claim sub status in the process configuration
+
 Version 1.14 - 2017-11-09
 * BUG#6891 Don't export loss description when exporting process
 * BUG#6659 Fix an inconsistency in the claim documents calculation
